// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs lines-between-class-members.md code examples ESLint output snapshot 1`] = `
"Options: "always", { "exceptAfterOverload": true }

class foo {
  bar(a: string): void;
  bar(a: string, b: string): void;
  bar(a: string, b: string) {}

  baz() {}

  qux() {}
}
"
`;

exports[`Validating rule docs lines-between-class-members.md code examples ESLint output snapshot 2`] = `
"Options: "always", { "exceptAfterOverload": false }

class foo {
  bar(a: string): void;

  bar(a: string, b: string): void;

  bar(a: string, b: string) {}

  baz() {}

  qux() {}
}
"
`;
